deployed url updated

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Oauth</title>
 </head>
 <body>
-    <a target="_blank" href="http://localhost:8080/auth/github/">
+    <a target="_blank" href="https://defiant-lime-kangaroo.cyclic.app/auth/github/">
         <button style="font: 1.3rem sans-serif; width: 30%; padding: 20px; position: absolute; top: 10%; left: 40%; right: 40%; border-radius: 10px; border: 1px solid rgb(211, 211, 211);" >Continue with Github</button>
     </a>
-    <a target="_blank" href="http://localhost:8080/auth/google/callback">
+    <a target="_blank" href="https://defiant-lime-kangaroo.cyclic.app/auth/google/callback">
         <button style="font: 1.3rem sans-serif; width: 30%; padding: 20px; position: absolute; top: 30%; left: 40%; right: 40%; border-radius: 10px; border: 1px solid rgb(211, 211, 211);" >Continue with Google</button>
     </a>
 </body>
